--- a/GenericHID/generichid/generichid.1
+++ b/GenericHID/generichid/generichid.1
@@ -34,7 +34,7 @@ generichid \- build your own USB HID device.
 .B generichid
 [\fIfile\fR]
 .SH DESCRIPTION
-\fBgenerichid\fR is used to interactively design and program USB HID devices based on the Atmel AT90USB1287 microcontroller.  The cheapest development board is the AT90USBKey which can be picked up for about $US30.
+\fBgenerichid\fR is used to interactively design and program USB HID devices based on the Atmel AT90USB1287/AT90USB1286 microcontroller.  The cheapest development board is the teensy++ 2.0 or the AT90USBKey which can be picked up for under $US30.
 
 A USB HID device is a Human Interface Device, the technical name for joysticks, gamepads, and other devices used for input.  This project was started to build CNC pendants, originally for Mach3, and the EMC, the Enhanced Machine Controller, 
 .URL http://www.linuxcnc.org
